Port to Minecraft 1.20.1 (Fabric + Forge 47)
Applies the class-mod 1.20.1 recipe: Loom 1.17 / architectury 3.5 / shadow 9.4.3
on Gradle 9.5.1, plain Yarn 1.20.1+build.1, Java 17 bytecode, `neoforge` module
converted to `forge` (Forge 47, mixin config via the jar manifest), no Forgified
Fabric API.

Pufferfish's Skills is pinned to `0.16.7+1.20` — the same mod release the 1.21.1
line uses (there is no `+1.20.1` artifact; `+1.20` covers 1.20/1.20.1). Its
public API is byte-identical across the two builds, so the only Skills-side
change is a datapack one: item icons carry an SNBT `nbt` string instead of a
`components` object.

Notable migrations:
- ResolvableTextContent: 1.20.1 has no TextCodecs/TextContent.Type, so the
  TextCodecs @ModifyArg becomes a Text$Serializer serialize/deserialize mixin.
- RangedWeaponAPI dropped as a compile dependency; `ranged_weapon:*` attributes
  are resolved by registry id at use time with a vanilla attack-damage fallback,
  and RWA is optional in both loader metadata files.
- EntityAttributeReward is keyed by attribute id (+ fallback) instead of a
  RegistryEntry; attribute modifiers are UUID keyed.
- RegistryIds helper replaces `getIdAsString()`.
- Bow/Crossbow conditions use new `#skill_tree_rpgs:bow` / `crossbow` item tags
  (1.20.1 has no `minecraft:*_enchantable`).
- Dropped modifiers for the three 1.21-only attributes: jump_strength,
  max_absorption (WizardAbsorbEffect already grants the absorption) and scale.
- Status effect API: void applyUpdateEffect, onApplied takes an AttributeContainer.
- Item lore moves from the lore data component to appendTooltip.
- Datagen on Fabric API 0.92 provider shapes; `advancement/` -> `advancements/`,
  `recipe/` -> `recipes/`.

Build green on both platforms; datagen reproducible; both dedicated servers
reach Done with Skills reporting the datapack loaded successfully.